<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gussio.nl.respondtest.MainActivity">

    <TextView
        android:id="@+id/introText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/introText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/soundButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/amountTitle"
        android:layout_alignStart="@+id/amountTitle"
        android:layout_below="@+id/introText"
        android:layout_marginTop="16dp"
        android:text="@string/soundButton" />

    <Button
        android:id="@+id/sightButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/soundButton"
        android:layout_alignRight="@+id/soundButton"
        android:layout_below="@+id/soundButton"
        android:layout_marginTop="16dp"
        android:text="@string/sightButton" />

    <EditText
        android:id="@+id/testCount"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sightButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:gravity="center|clip_horizontal"
        android:inputType="numberSigned"
        android:text="10" />

    <EditText
        android:id="@+id/minCount"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/minDecreaseButton"
        android:layout_toLeftOf="@+id/testCountDecreaseButton"
        android:layout_toStartOf="@+id/testCountDecreaseButton"
        android:ems="10"
        android:gravity="center|clip_horizontal"
        android:inputType="numberSigned"
        android:text="3" />

    <EditText
        android:id="@+id/maxCount"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/maxTitle"
        android:layout_toEndOf="@+id/minIncreaseButton"
        android:layout_toRightOf="@+id/minIncreaseButton"
        android:ems="10"
        android:gravity="center|clip_horizontal"
        android:inputType="numberSigned"
        android:text="10" />

    <Button
        android:id="@+id/testCountIncreaseButton"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/testCount"
        android:layout_toLeftOf="@+id/testCount"
        android:layout_toStartOf="@+id/testCount"
        android:text="@string/plus" />

    <Button
        android:id="@+id/minIncreaseButton"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/minCount"
        android:layout_toLeftOf="@+id/minCount"
        android:layout_toStartOf="@+id/minCount"
        android:text="@string/plus" />

    <Button
        android:id="@+id/maxIncreaseButton"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/maxCount"
        android:layout_alignBottom="@+id/maxCount"
        android:layout_toLeftOf="@+id/maxCount"
        android:layout_toStartOf="@+id/maxCount"
        android:text="@string/plus" />

    <Button
        android:id="@+id/testCountDecreaseButton"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/testCount"
        android:layout_alignBottom="@+id/testCount"
        android:layout_toEndOf="@+id/testCount"
        android:layout_toRightOf="@+id/testCount"
        android:text="@string/minus" />

    <Button
        android:id="@+id/minDecreaseButton"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/minTitle"
        android:layout_toEndOf="@+id/minCount"
        android:layout_toRightOf="@+id/minCount"
        android:text="@string/minus" />

    <Button
        android:id="@+id/maxDecreaseButton"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/maxCount"
        android:layout_alignBottom="@+id/maxCount"
        android:layout_toEndOf="@+id/maxCount"
        android:layout_toRightOf="@+id/maxCount"
        android:text="@string/minus" />

    <TextView
        android:id="@+id/amountTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/testCountDecreaseButton"
        android:layout_centerHorizontal="true"
        android:text="@string/amountTitle" />

    <TextView
        android:id="@+id/minTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/testCountDecreaseButton"
        android:layout_centerHorizontal="true"
        android:text="@string/minTitle" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/copyright" />

    <TextView
        android:id="@+id/maxTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/minIncreaseButton"
        android:layout_centerHorizontal="true"
        android:text="@string/maxTitle" />

</RelativeLayout>
